# alphax_pos

./: .gitignore  DEPLOY.md  LIVE_DATA.md  MANIFEST.in  README.md  pyproject.toml
alphax_pos/: hooks.py  install.py  modules.txt  tasks.py
alphax_pos/alphax_pos/api/: boot.py  floorplan.py  loyalty.py  menu.py  menu_sync.py  order.py  payment.py  recipe.py  setup.py  shift.py
alphax_pos/alphax_pos/doctype/alphax_branding/: alphax_branding.json  alphax_branding.py
alphax_pos/alphax_pos/doctype/alphax_cash_movement/: alphax_cash_movement.json  alphax_cash_movement.py
alphax_pos/alphax_pos/doctype/alphax_cash_session/: alphax_cash_session.json  alphax_cash_session.py
alphax_pos/alphax_pos/doctype/alphax_currency_denomination/: alphax_currency_denomination.json  alphax_currency_denomination.py
alphax_pos/alphax_pos/doctype/alphax_floor/: alphax_floor.js  alphax_floor.json  alphax_floor.py
alphax_pos/alphax_pos/doctype/alphax_item_modifier_link/: alphax_item_modifier_link.json  alphax_item_modifier_link.py
alphax_pos/fixtures/: alphax_currency_denomination.json  alphax_payment_mode.json  alphax_theme.json  custom_field.json  role.json
alphax_pos/public/pos/: index.html
alphax_pos/theme_presets/: themes.json
alphax_pos/www/pos/: index.html  index.py
posTerminal/: index.html  package-lock.json  package.json  vite.config.ts
posTerminal/scripts/: copy-html-entry.js
posTerminal/src/: App.tsx  index.css  main.tsx
posTerminal/src/config/: verticals.ts
posTerminal/src/theme/: applyTheme.ts  themes.ts  useBoot.ts
posTerminal/src/utils/: money.ts
(+47 files in other folders)
