[project]
name = "alphax_pos"
version = "0.3.0"
description = "AlphaX POS — multi-vertical, white-label point of sale for ERPNext (KSA/GCC)."
authors = [{ name = "Neotec Integrated Solution", email = "support@neotec.ai" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "alphax_pos"